Se agrega tabla de escuelas en piramide de maslow